# overitall

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  plan.md
Formula/: oit.rb
benches/: ansi_cache.rs  batch_detection.rs  batch_detection_cached.rs
example/: Procfile  README.md  monitor.rb  overitall.toml  web_server.rb  worker.rb
man/: oit.1
scripts/: release.sh
src/: cli.rs  cli_tests.rs  clipboard.rs  command.rs  config.rs  event_handler.rs  group.rs  lib.rs  main.rs  process.rs  process_tree.rs  procfile.rs  skill.rs  status_matcher.rs  ui.rs  updater.rs
src/ipc/: action.rs  client.rs  handler.rs  mod.rs  protocol.rs  server.rs  state.rs
src/log/: buffer.rs  display.rs  file.rs  mod.rs  velocity.rs
src/operations/: batch.rs  batch_window.rs  clipboard.rs  coloring.rs  config.rs  display.rs  filter.rs  goto.rs  logs.rs  manual_trace.rs  mod.rs  navigation.rs  process.rs  search.rs  traces.rs  visibility.rs
src/traces/: detection.rs  mod.rs
src/ui/: ansi_cache.rs  app.rs  batch.rs  batch_cache.rs  batch_state.rs  click_regions.rs  display_state.rs  draw.rs  filter.rs  filter_state.rs  input_state.rs  mod.rs  navigation_state.rs  process_colors.rs  render_cache.rs  theme.rs  trace_state.rs  types.rs  utils.rs
src/ui/widgets/: mod.rs  (+5 more)
tests/: basic_ui_tests.rs  batch_tests.rs  batch_window_tests.rs  combined_tests.rs  display_mode_tests.rs  filter_tests.rs  follow_mode_tests.rs  handler_tests.rs  ipc_integration.rs  log_file_tests.rs  navigation_tests.rs  process_tests.rs  search_tests.rs  status_tests.rs  ui_tests.rs
tests/common/: mod.rs
tests/snapshots/: basic_ui_tests__ui_tests__basic_ui_rendering.snap  basic_ui_tests__ui_tests__command_mode_display.snap  basic_ui_tests__ui_tests__search_mode_display.snap  batch_tests__snapshot_batch_navigation_second_batch.snap  batch_tests__snapshot_batch_separators_visible.snap  batch_tests__snapshot_batch_view_mode.snap  batch_tests__snapshot_single_batch_no_separators.snap  batch_window_tests__batch_window_snapshot_with_large_window.snap  batch_window_tests__batch_window_snapshot_with_small_window.snap  combined_tests__snapshot_all_features_active.snap  combined_tests__snapshot_filtering_and_batching_combined.snap  combined_tests__snapshot_search_and_batching_combined.snap  combined_tests__snapshot_search_and_filtering_combined.snap  display_mode_tests__snapshot_display_mode_compact.snap  display_mode_tests__snapshot_display_mode_full.snap  display_mode_tests__snapshot_display_mode_wrap.snap  display_mode_tests__snapshot_expanded_line_overlay_narrow.snap  display_mode_tests__snapshot_expanded_line_panel_no_selection.snap  display_mode_tests__snapshot_expanded_line_panel_wide.snap  display_mode_tests__snapshot_timestamp_mode_milliseconds.snap  display_mode_tests__snapshot_timestamp_mode_off.snap  display_mode_tests__snapshot_timestamp_mode_seconds.snap  (+58 more)
vscode-extension/: .vscodeignore  LICENSE  package-lock.json  package.json
(+12 files in other folders)
