[package]
name = "overitall"
version = "0.1.15"
edition = "2024"
default-run = "oit"

[[bin]]
name = "oit"
path = "src/main.rs"

[[bin]]
name = "bench_baseline"
path = "benches/batch_detection.rs"

[[bin]]
name = "bench_cached"
path = "benches/batch_detection_cached.rs"

[dependencies]
ratatui = "0.29"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
crossterm = "0.28"
chrono = "0.4"
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
arboard = "3.4"
strip-ansi-escapes = "0.2"
unicode-width = "0.2"
ansi-to-tui = "7.0"
tempfile = "3.23.0"
exec = "0.3"
notify = "7.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
insta = "1.44.3"
